# score-avnd-template

./: CMakeLists.txt  init.zsh  score_addon_my_avnd_effect.cpp  score_addon_my_avnd_effect.hpp
.github/workflows/: builds.yaml  jit.yml
MyAvndEffect/: AnEffect.hpp  AnEffectModel.cpp  AnEffectModel.hpp  AnEffectUi.hpp  MyAvndEffectModel.cpp  MyAvndEffectModel.hpp  MyAvndEffectUi.hpp
